# latticefold_plus

./: .gitignore  Cargo.toml  Double Commitment System Implementation.md  HOMOMORPHIC_OPERATIONS.md  NTT_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  R1CS_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY_IMPLEMENTATION_GUIDE.md  SECURITY_IMPLEMENTATION_SUMMARY.md  Security Analysis and Attack Resistance.md  benchmark_config.toml  test_cyclotomic.rs  test_monomial_compilation.rs  test_ntt_basic.rs
.kiro/specs/latticefold-plus-unimplemented/: design.md  requirements.md  tasks.md  unimplemented-analysis.md
.kiro/steering/: complete-implementation.md
benches/: comprehensive_performance_bench.rs  gpu_ntt_bench.rs  homomorphic_bench.rs  lattice_fold_bench.rs  performance_optimization_bench.rs
docs/: README.md  mathematical-foundations.md  performance_benchmarking.md  quick-start.md
docs/api-reference/: README.md  cyclotomic-ring.md  modular-arithmetic.md  ntt.md
latticefold_plus/: Cargo.toml  README.md
latticefold_plus/benches/: lattice_operations.rs
latticefold_plus/src/: error.rs  folding.rs  lattice.rs  lib.rs
scripts/: run_performance_benchmarks.ps1  run_performance_benchmarks.sh
src/: adaptive_security.rs  amortized.rs  amortized_verification.rs  attack_resistance.rs  challenge.rs  challenge_generation.rs  commitment.rs  commitment_sis.rs  commitment_transformation.rs  cyclotomic_ring.rs  double_commitment.rs  end_to_end_folding.rs  end_to_end_folding_tests.rs  error.rs  final_proof.rs  folding.rs  folding_challenge_generation.rs  folding_prover.rs  gadget.rs  integration_tests.rs  lattice.rs  lattice_fold.rs  lib.rs  modular_arithmetic.rs  monomial.rs  monomial_commitment.rs  monomial_set_checking.rs  msis.rs  multi_instance_folding.rs  norm_computation.rs  ntt.rs  parallel_folding.rs  parameter_generation.rs  parameter_selection.rs  polynomial_multiplication.rs  protocol.rs  quantum_resistance.rs  r1cs.rs  r1cs_tests.rs  range_check_protocol.rs  (+12 more)
src/gpu/: cuda.rs  kernels.rs  mod.rs  opencl.rs  tests.rs  utils.rs
src/integration_tests/: compatibility.rs  end_to_end.rs  mod.rs  performance.rs  security.rs  test_runner.rs
src/memory/: cache_blocking.rs  mod.rs
src/performance/: analysis_documentation.rs  mod.rs  regression_testing.rs
src/security/: constant_time.rs  mod.rs  secure_memory.rs  security_validation.rs  side_channel_resistance.rs  timing_analysis.rs
src/simd/: avx2.rs  avx512.rs  batch_operations.rs  mod.rs  neon.rs  scalar_fallback.rs  vectorized_arithmetic.rs
src/tests/: gpu_ntt_tests.rs  mod.rs  ntt_multiplication_tests.rs
