[package]
name = "latticefold_plus"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Implementation of LatticeFold+: Faster, Simpler, Shorter Lattice-Based Folding for Succinct Proof Systems"
license = "MIT"
repository = "https://github.com/yourusername/latticefold_plus"
keywords = ["cryptography", "zero-knowledge", "lattice", "folding", "proof-systems"]
categories = ["cryptography"]

[dependencies]
ark-ec = { version = "0.4.0", features = ["parallel"] }
ark-ff = { version = "0.4.0", features = ["parallel"] }
ark-poly = { version = "0.4.0", features = ["parallel"] }
ark-std = { version = "0.4.0", features = ["parallel"] }
ark-bls12-381 = { version = "0.4.0", features = ["parallel"] }
ark-serialize = { version = "0.4.0", features = ["derive"] }
merlin = "3.0.0"
rand = "0.8.5"
rand_core = "0.6.4"
blake3 = "1.3.3"
thiserror = "1.0.40"
zeroize = { version = "1.6.0", features = ["zeroize_derive"] }
rayon = "1.7.0"
num-bigint = "0.4.3"
num-traits = "0.2.15"
sha3 = "0.10.8"
digest = "0.10.7"
subtle = "2.5.0"
byteorder = "1.4.3"

[dev-dependencies]
ark-std = { version = "0.4.0", features = ["parallel", "test_rng"] }
criterion = "0.5.1"
proptest = "1.2.0"
quickcheck = "1.0.3"
rand_chacha = "0.3.1"

[[bench]]
name = "lattice_fold_bench"
harness = false 