[package]
name = "latticefold_plus"
version = "0.1.0"
edition = "2021"
authors = ["LatticeFold+ Implementation"]
description = "Implementation of LatticeFold+: Faster, Simpler, Shorter Lattice-Based Folding for Succinct Proof Systems"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
sha3 = "0.10"
num-bigint = "0.4"
num-traits = "0.2"
rayon = "1.7"
thiserror = "1.0"
derive_more = "0.99"
blake3 = "1.3"
subtle = "2.5"
zeroize = { version = "1.5", features = ["zeroize_derive"] }
merlin = "3.0"
curve25519-dalek = { version = "4.0", features = ["rand_core"] }

[dev-dependencies]
criterion = "0.4"
proptest = "1.1"

[[bench]]
name = "lattice_operations"
harness = false

[features]
default = ["std"]
std = []
nightly = []
